PhotoDB/photodb/apps/photodb/static/photodb/css/base.css
html, body{
    background-color: #222;
    color: #eee;
}
a{
    outline: none;
}
#header{
    background-color: #111;
}
.logo{
    height: 25px;
}
a{
    text-decoration: none;
}
.center-text{
    text-align: center;
}
.container{
    margin-top: 20px;
}
.welcome_name{
    margin-right: 5px;
}
.btn:hover{
    cursor: pointer;
}
.btn:disabled{
    cursor: default;
}
.modal-content{
    background-color: #222;
}
.modal-header{
    border-bottom-color: #777;
}
.modal-footer{
    border-top-color: #777;
}

